--- a/src/components/temp2/temp2.component.html
+++ b/src/components/temp2/temp2.component.html
@@ -198,7 +198,7 @@
             </div>
         </div>
         <div class="md:w-[50%] py-[16px] grid place-content-center">
-            <img class="h-[270px]" src="assets/temp2/5.jpg" alt="">
+            <img class="md:h-[270px]" src="assets/temp2/5.jpg" alt="">
         </div>
         <div class="md:w-[25%] sm:py-[16px]">
             <div class="mb-[42px]">
@@ -223,7 +223,7 @@
     </div>
     <div class="md:py-[5rem] py-[2.5rem]">
         <div class="md:px-[60px] px-[25px]">
-            <div class="text-center text-2xl text-white sm:px-[20%]">
+            <div class="text-center text-2xl text-white md:px-[20%]">
                 Consectetur consequuntur ducimus, iusto laboriosam
                 necessitatibus, obcaecati perferendis porro qui repellat reprehenderit rerum. enim inventore
                 iure minus nostrum nulla.
@@ -232,12 +232,12 @@
     </div>
     <div class=" flex flex-wrap md:py-[5rem] py-[2.5rem] ">
         <div class="md:w-[60%]">
-            <img class="sm:h-[960px] md:px-[16px] pb-[25px] sm:pb-[0px]" src="assets/temp2/6.jpg" alt="" srcset="">
+            <img class="md:h-[960px] md:px-[16px] pb-[25px] md:pb-[0px]" src="assets/temp2/6.jpg" alt="" srcset="">
         </div>
-        <div class="md:w-[40%] sm:h-[960px] md:px-[16px] px-[25px] place-content-center">
-            <div class="sm:px-[60px]">
+        <div class="md:w-[40%] md:h-[960px] md:px-[16px] px-[25px] place-content-center">
+            <div>
                 <div class="mb-[90px] flex flex-wrap">
-                    <i class="fa fa-user sm:text-8xl text-6xl text-[#616161] w-[30%] pr-[20px]"></i>
+                    <i class="fa fa-user sm:text-8xl text-6xl text-[#616161] w-[30%] md:pr-[20px]"></i>
                     <div class="w-[70%]">
                         <p class="text-white text-2xl">
                             Excellent <br> teamwork
@@ -248,7 +248,7 @@
                 </div>
 
                 <div class="mb-[90px] flex flex-wrap">
-                    <i class="fa fa-star sm:text-8xl text-6xl text-[#616161] w-[30%] pr-[20px]"></i>
+                    <i class="fa fa-star sm:text-8xl text-6xl text-[#616161] w-[30%] md:pr-[20px]"></i>
                     <div class="w-[70%]">
                         <p class="text-white text-2xl">
                             New design <br> approach
@@ -258,7 +258,7 @@
                     </div>
                 </div>
                 <div class="mb-[90px] flex flex-wrap">
-                    <i class="fa fa-car sm:text-8xl text-6xl text-[#616161] w-[30%] pr-[20px]"></i>
+                    <i class="fa fa-car sm:text-8xl text-6xl text-[#616161] w-[30%] md:pr-[20px]"></i>
                     <div class="w-[70%]">
                         <p class="text-white text-2xl">
                             Future <br> technology
@@ -286,7 +286,7 @@
         </div>
     </div>
     <div class="flex flex-wrap md:py-[5rem] py-[2.5rem]">
-        <div class="text-center h-[16rem] md:h-full md:w-[33%] place-content-center px-[30px]"
+        <div class="text-center h-[246px] sm:w-[50%] md:w-[33%] place-content-center px-[30px]"
             style="background-image: url('assets/temp2/8.jpg'); background-size: cover;">
             <p class="text-white text-2xl">Main users</p>
             <p class="my-[25px] text-[#616161]">Lorem ipsum dolor sit amet,
@@ -294,22 +294,22 @@
             <button class="text-white text-2xl">See
                 more <i class="fas fa-play-circle play-icon pl-1"></i></button>
         </div>
-        <img class="md:w-[33%] h-[16rem] md:h-full" src="assets/temp2/9.jpg" alt="">
-        <div class="h-[16rem] sm:h-full text-center md:w-[33%] place-content-center px-[30px]"
-            style="background-image: url('assets/temp2/13.jpg');background-size: cover;">
+        <img class="sm:w-[50%] md:w-[33%] h-[246px]" src="assets/temp2/9.jpg" alt="">
+        <div class="text-center h-[246px] sm:w-[50%] md:w-[33%] place-content-center px-[30px]"
+            style="background-image: url('assets/temp2/13.jpg'); background-size: cover;">
             <p class="text-white text-2xl">Production</p>
             <p class="my-[25px] text-[#616161]">Lorem ipsum dolor sit amet,
                 consectetur adipisicing elit.</p>
             <button class="text-white text-2xl">See
                 more <i class="fas fa-play-circle play-icon pl-1"></i></button>
         </div>
-        <img class="h-[16rem] md:h-full md:w-[33%]" src="assets/temp2/10.jpg" alt="">
-        <img class="md:w-[33%] h-[16rem] md:h-full" src="assets/temp2/9.jpg" alt="">
-        <img class="h-[16rem] md:h-full md:w-[33%]" src="assets/temp2/12.jpg" alt="">
+        <img class="sm:w-[50%] h-[246px] md:w-[33%]" src="assets/temp2/10.jpg" alt="">
+        <img class="sm:w-[50%] md:w-[33%] h-[246px]" src="assets/temp2/9.jpg" alt="">
+        <img class="sm:w-[50%] h-[246px] md:w-[33%]" src="assets/temp2/12.jpg" alt="">
     </div>
     <div class="md:py-[5rem] py-[2.5rem]">
         <div class="md:px-[51px] px-[25px] flex flex-wrap">
-            <div class="w-full pb-[25px] sm:w-[50%] sm:w-[33%]">
+            <div class="w-full pb-[25px] sm:w-[50%] md:w-[33%]">
                 <div class=" border rounded-lg py-[60px] px-[30px] sm:mx-[20px]">
                     <p class="text-[#616161]">EACH MONTH</p>
                     <p class="text-white"><span class="text-6xl">50</span> <span>$</span></p>
@@ -325,7 +325,7 @@
                         now <i class="fas fa-play-circle play-icon pl-1"></i></button>
                 </div>
             </div>
-            <div class="w-full pb-[25px] sm:w-[50%] sm:w-[33%]">
+            <div class="w-full pb-[25px] sm:w-[50%] md:w-[33%]">
                 <div
                     class="bg-gradient-to-r from-gray-500 to-gray-100  border rounded-lg py-[60px] px-[30px] sm:mx-[20px]">
                     <p class="text-[#616161]">EACH MONTH</p>
@@ -342,7 +342,7 @@
                         now <i class="fas fa-play-circle play-icon pl-1"></i></button>
                 </div>
             </div>
-            <div class="w-full pb-[25px] md:w-[33%]">
+            <div class="w-full pb-[25px] sm:w-[50%] md:w-[33%] sm:mx-auto">
                 <div class=" border rounded-lg py-[60px] px-[30px] sm:mx-[20px]">
                     <p class="text-[#616161]">EACH MONTH</p>
                     <p class="text-white"><span class="text-6xl">90</span> <span>$</span></p>
@@ -360,8 +360,8 @@
             </div>
         </div>
         <div class="md:py-[5rem] py-[2.5rem]">
-            <div class="flex flex-wrap sm:px-[51px] px-[25px]">
-                <div class="pb-25px sm:w-[50%] sm:px-[20px] sm:pb-[0px] pb-[25px]">
+            <div class="flex flex-wrap md:px-[51px] px-[25px]">
+                <div class="pb-25px md:w-[50%] md:px-[20px] md:pb-[0px] pb-[25px]">
                     <p class="text-xl mb-[20px] text-white">Write to our company!</p>
                     <p class="text-[#616161]">Accusantium aliquam aperiam architecto aut autem, culpa doloribus esse
                         illum
@@ -384,8 +384,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="sm:w-[50%] flex flex-wrap">
-                    <div class="w-full sm:w-[50%] sm:px-2 pt-[25px] sm:pt-[0px]">
+                <div class="md:w-[50%] flex flex-wrap">
+                    <div class="w-full md:w-[50%] md:px-2 pt-[25px] md:pt-[0px]">
                         <div class="relative z-0">
                             <input type="text" id="small_standard"
                                 class="block w-full px-0 py-2 text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer"
@@ -395,7 +395,7 @@
                                 Your name</label>
                         </div>
                     </div>
-                    <div class="w-full sm:w-[50%] sm:px-2 pt-[25px] sm:pt-[0px]">
+                    <div class="w-full md:w-[50%] md:px-2 pt-[25px] md:pt-[0px]">
                         <div class="relative z-0">
                             <input type="text" id="small_standard"
                                 class="block w-full px-0 py-2 text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer"
@@ -405,7 +405,7 @@
                                 Your e-mail</label>
                         </div>
                     </div>
-                    <div class="w-full sm:px-2 pt-[25px] sm:pt-[0px]">
+                    <div class="w-full md:px-2 pt-[25px] md:pt-[0px]">
                         <div class="relative z-0">
                             <input type="text" id="small_standard"
                                 class="block w-full px-0 py-2 text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer"
@@ -416,7 +416,7 @@
                         </div>
                     </div>
                     <div>
-                        <div class="flex justify-end mt-[40%] sm:mt-[138%]">
+                        <div class="flex justify-end mt-[40%] md:mt-[138%]">
                             <button
                                 class="rounded-2xl py-1.5 text-sm px-3 bg-gradient-to-r from-gray-500 to-gray-100 hover:from-gray-600 hover:to-gray-200 ...">
                                 Submit
@@ -431,7 +431,7 @@
         </div>
     </div>
     <div class="md:py-[5rem] py-[2.5rem]">
-        <div class="flex flex-wrap sm:px-[51px] px-[25px]">
+        <div class="flex flex-wrap md:px-[51px] px-[25px]">
             <img class="sm:h-[650px] pb-[25px] sm:pb-[0px] sm:w-[60%] sm:pr-[18px]" src="assets/temp2/14.jpg" alt=""
                 srcset="">
             <div class="sm:h-[650px] border sm:w-[40%] sm:pl-[18px] px-[6px] sm:px-[0px] grid place-content-center">
@@ -448,14 +448,15 @@
             </div>
         </div>
     </div>
-    <div class="py-8 grid grid-cols-2 gap-4 md:gap-8 md:grid-cols-3 md:px-4 lg:px-8 xl:px-16">
-        <img class="h-24 md:h-36 lg:h-48 w-full md:w-auto" src="assets/temp2/9.jpg" alt="" srcset="">
-        <img class="h-24 md:h-36 lg:h-48 w-full md:w-auto" src="assets/temp2/10.jpg" alt="" srcset="">
-        <img class="h-24 md:h-36 lg:h-48 w-full md:w-auto" src="assets/temp2/11.jpg" alt="" srcset="">
-        <img class="h-24 md:h-36 lg:h-48 w-full md:w-auto" src="assets/temp2/12.jpg" alt="" srcset="">
-        <img class="h-24 md:h-36 lg:h-48 w-full md:w-auto" src="assets/temp2/13.jpg" alt="" srcset="">
-        <img class="h-24 md:h-36 lg:h-48 w-full md:w-auto" src="assets/temp2/14.jpg" alt="" srcset="">
+    <div class="flex sm:flex-wrap sm:px-[51px] px-[25px] justify-between md:py-[5rem] py-[2.5rem]">
+        <img class="h-24 w-24 mb-4 sm:w-[33.33%] md:w-[16.66%] " src="assets/temp2/9.jpg" alt="">
+        <img class="h-24 w-24 mb-4 sm:w-[33.33%]  md:w-[16.66%]" src="assets/temp2/10.jpg" alt="">
+        <img class="h-24 w-24 mb-4 sm:w-[33.33%] md:w-[16.66%]" src="assets/temp2/11.jpg" alt="">
+        <img class="h-24 w-24 mb-4 sm:w-[33.33%]  md:w-[16.66%]" src="assets/temp2/12.jpg" alt="">
+        <img class="h-24 w-24 mb-4 sm:w-[33.33%]  md:w-[16.66%]" src="assets/temp2/13.jpg" alt="">
+        <img class="h-24 w-24 mb-4 sm:w-[33.33%]  md:w-[16.66%]" src="assets/temp2/14.jpg" alt="">
     </div>
+
 
 
     <footer class="md:py-[5rem] py-[2.5rem] flex flex-wrap px-4 bg-gray-900 text-white pt-10 justify-between pb-2">
