--- a/src/components/temp2/temp2.component.html
+++ b/src/components/temp2/temp2.component.html
@@ -232,42 +232,39 @@
     </div>
     <div class=" flex flex-wrap md:py-[5rem] py-[2.5rem] ">
         <div class="md:w-[60%]">
-            <img class="md:h-[960px] md:px-[16px] pb-[25px] md:pb-[0px]" src="assets/temp2/6.jpg" alt="" srcset="">
+            <img class="md:h-[960px] md:px-[16px] pb-[2.5rem] md:pb-[0px]" src="assets/temp2/6.jpg" alt="" srcset="">
         </div>
-        <div class="md:w-[40%] md:h-[960px] md:px-[16px] px-[25px] place-content-center">
-            <div>
-                <div class="mb-[90px] flex flex-wrap">
-                    <i class="fa fa-user sm:text-8xl text-6xl text-[#616161] w-[30%] md:pr-[20px]"></i>
-                    <div class="w-[70%]">
-                        <p class="text-white text-2xl">
-                            Excellent <br> teamwork
-                        </p>
-                        <p class="text-[#616161]"> Repellendus unde exercitationem harum maiores.</p>
+        <div class="md:w-[40%] md:h-[960px] md:px-[16px] px-[25px] md:place-content-center">
+            <div class="mb-[90px] flex flex-wrap">
+                <i class="fa fa-user sm:text-8xl text-6xl text-[#616161] w-[30%] md:pr-[20px]"></i>
+                <div class="w-[70%]">
+                    <p class="text-white text-2xl">
+                        Excellent <br> teamwork
+                    </p>
+                    <p class="text-[#616161]"> Repellendus unde exercitationem harum maiores.</p>
 
-                    </div>
                 </div>
+            </div>
 
-                <div class="mb-[90px] flex flex-wrap">
-                    <i class="fa fa-star sm:text-8xl text-6xl text-[#616161] w-[30%] md:pr-[20px]"></i>
-                    <div class="w-[70%]">
-                        <p class="text-white text-2xl">
-                            New design <br> approach
-                        </p>
-                        <p class="text-[#616161]"> Possimus provident quam quasi sapiente tenetur ut veniam vero.</p>
+            <div class="mb-[90px] flex flex-wrap">
+                <i class="fa fa-star sm:text-8xl text-6xl text-[#616161] w-[30%] md:pr-[20px]"></i>
+                <div class="w-[70%]">
+                    <p class="text-white text-2xl">
+                        New design <br> approach
+                    </p>
+                    <p class="text-[#616161]"> Possimus provident quam quasi sapiente tenetur ut veniam vero.</p>
 
-                    </div>
                 </div>
-                <div class="mb-[90px] flex flex-wrap">
-                    <i class="fa fa-car sm:text-8xl text-6xl text-[#616161] w-[30%] md:pr-[20px]"></i>
-                    <div class="w-[70%]">
-                        <p class="text-white text-2xl">
-                            Future <br> technology
-                        </p>
-                        <p class="text-[#616161]"> Ea earum obcaecati quis similique voluptates.</p>
+            </div>
+            <div class="md:mb-[90px] flex flex-wrap">
+                <i class="fa fa-car sm:text-8xl text-6xl text-[#616161] w-[30%] md:pr-[20px]"></i>
+                <div class="w-[70%]">
+                    <p class="text-white text-2xl">
+                        Future <br> technology
+                    </p>
+                    <p class="text-[#616161]"> Ea earum obcaecati quis similique voluptates.</p>
 
-                    </div>
                 </div>
-
             </div>
         </div>
     </div>
@@ -448,13 +445,14 @@
             </div>
         </div>
     </div>
-    <div class="flex sm:flex-wrap sm:px-[51px] px-[25px] justify-between md:py-[5rem] py-[2.5rem]">
-        <img class="h-24 w-24 mb-4 sm:w-[33.33%] md:w-[16.66%] " src="assets/temp2/9.jpg" alt="">
-        <img class="h-24 w-24 mb-4 sm:w-[33.33%]  md:w-[16.66%]" src="assets/temp2/10.jpg" alt="">
-        <img class="h-24 w-24 mb-4 sm:w-[33.33%] md:w-[16.66%]" src="assets/temp2/11.jpg" alt="">
-        <img class="h-24 w-24 mb-4 sm:w-[33.33%]  md:w-[16.66%]" src="assets/temp2/12.jpg" alt="">
-        <img class="h-24 w-24 mb-4 sm:w-[33.33%]  md:w-[16.66%]" src="assets/temp2/13.jpg" alt="">
-        <img class="h-24 w-24 mb-4 sm:w-[33.33%]  md:w-[16.66%]" src="assets/temp2/14.jpg" alt="">
+    <div class="flex flex-wrap sm:px-[51px] px-[25px] justify-between md:py-[5rem] py-[2.5rem]">
+        <img class="h-24 mb-4 w-[50%] sm:w-[33.33%] md:w-[16.66%] pr-4" src="assets/temp2/9.jpg" alt="">
+        <img class="h-24 mb-4 w-[50%] sm:w-[33.33%]  md:w-[16.66%] md:pr-4 sm:pr-4" src="assets/temp2/10.jpg" alt="">
+        <img class="h-24 mb-4 w-[50%] sm:w-[33.33%] md:w-[16.66%] pr-4 sm:pr-0 md:pr-4" src="assets/temp2/11.jpg"
+            alt="">
+        <img class="h-24 mb-4 w-[50%] sm:w-[33.33%]  md:w-[16.66%] sm:pr-4 md:pr-4" src="assets/temp2/12.jpg" alt="">
+        <img class="h-24 mb-4 w-[50%] sm:w-[33.33%]  md:w-[16.66%] pr-4" src="assets/temp2/13.jpg" alt="">
+        <img class="h-24 mb-4 w-[50%] sm:w-[33.33%]  md:w-[16.66%] md:pr-0" src="assets/temp2/14.jpg" alt="">
     </div>
 
 
